third_party/move/move-compiler-v2/tests/reference-safety/v1-tests/borrow_local_combo.exp

Diagnostics:
error: cannot mutably borrow local `s` since other references exists
   ┌─ tests/reference-safety/v1-tests/borrow_local_combo.move:13:17
   │
12 │         if (cond) f = &s.f else f = &other.f;
   │                        - previous local borrow
13 │         let x = &mut s;
   │                 ^^^^^^ mutable borrow attempted here

error: cannot mutably borrow local `s` since other references exists
   ┌─ tests/reference-safety/v1-tests/borrow_local_combo.move:21:17
   │
20 │         if (cond) f = &s.f else f = &s.g;
   │                        -             - previous local borrow
   │                        │
   │                        previous local borrow
21 │         let x = &mut s;
   │                 ^^^^^^ mutable borrow attempted here

error: cannot mutably borrow local `s` since other references exists
   ┌─ tests/reference-safety/v1-tests/borrow_local_combo.move:29:17
   │
28 │         if (cond) f = &mut s.f else f = &mut other.f;
   │                            - previous mutable local borrow
29 │         let x = &mut s;
   │                 ^^^^^^ mutable borrow attempted here

error: cannot mutably borrow local `s` since other references exists
   ┌─ tests/reference-safety/v1-tests/borrow_local_combo.move:45:17
   │
44 │         if (cond) x = &mut s else x = other;
   │                       ------ previous mutable local borrow
45 │         let y = &mut s;
   │                 ^^^^^^ mutable borrow attempted here
